<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:gravity="fill_vertical"
    android:orientation="vertical">

    <Button
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="@string/about_company" />

    <Button
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="@string/about_history" />

    <Button
        android:id="@+id/vision"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="@string/about_vision" />

    <Button
        android:id="@+id/partners"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="@string/about_parnters" />
</LinearLayout>